Fixed spacing issue between the 'View section' and 'Percentage learning completion'

--- a/DigitalLearningSolutions.Web/Styles/layout.scss
+++ b/DigitalLearningSolutions.Web/Styles/layout.scss
@@ -338,3 +338,8 @@ nav, .nhsuk-header__navigation, #header-navigation {
 .nhsuk-width-container {
   max-width: 1144px !important;
 }
+@media only screen and (max-width: 767px) {
+  .nhsuk-grid-column-one-third {
+    margin-top: 10px;
+  }
+}
